subdir('accurip')
subdir('adpcmdec')
subdir('adpcmenc')
subdir('aiff')
subdir('asfmux')
subdir('audiobuffer')
subdir('audiofxbad')
subdir('audiomixer')
subdir('audiovisualizers')
subdir('autoconvert')
subdir('bayer')
subdir('camerabin2')
# did not work
#subdir('cdxaparse')
subdir('coloreffects')
subdir('compositor')
subdir('dataurisrc')
#did not work
#subdir('dccp')
subdir('debugutils')
subdir('dvbsuboverlay')
subdir('dvdspu')
# did not work
#subdir('faceoverlay')
subdir('festival')
subdir('fieldanalysis')
subdir('freeverb')
subdir('frei0r')
# did not work
#subdir('games')
subdir('gaudieffects')
subdir('gdp')
#subdir('geometrictransform')
#subdir('hdvparse')
#subdir('id3tag')
#subdir('inter')
#subdir('interlce')
#subdir('ivfparse')
#subdir('ivtc')
#subdir('jp2kdecimator')
#subdir('jpegformat')
#subdir('librfb')
#subdir('liveadder')
#subdir('midi')
#subdir('mixmatrix')
#subdir('mpeg1sys')
#subdir('mpegdemux')
#subdir('mpegpsmux')
#subdir('mpegtsdemux')
#subdir('mpegtsmux')
#subdir('mve')
#subdir('mxf')
#subdir('nuvdemux')
#subdir('overlay')
#subdir('patchdetect')
#subdir('pcapparse')
#subdir('pnm')
#subdir('rawparse')
#subdir('real')
#subdir('removesilence')
#subdir('rtjpeg')
#subdir('sdi')
#subdir('sdp')
#subdir('segmentclip')
#subdir('siren')
#subdir('smooth')
#subdir('smoothwave')
#subdir('speed')
#subdir('stereo')
#subdir('subenc')
#subdir('tta')
#subdir('vbidec')
#subdir('videofilters')
#subdir('videomeasure')
#subdir('videoparsers')
#subdir('videosignal')
#subdir('vmnc')
#subdir('y4m')
#subdir('yadif')
