audiobuffer_sources = [
  'gstaudioringbuffer.c',
]

# Fails for some reason due to missing gst/audio/gstringbuffer.h
# gstaudiobuffer = library('gstaudiobuffer',
#   audiobuffer_sources,
#   c_args : core_args,
#   include_directories : core_incs,
#   dependencies : [gstbase_dep, gstaudio_dep],
# )
