geotr_sources = [
  'plugin.c',
  'gstgeometrictransform.c',
  'gstcirclegeometrictransform.c',
  'geometricmath.c',
  'gstcircle.c',
  'gstdiffuse.c',
  'gstkaleidoscope.c',
  'gstmarble.c',
  'gstpinch.c',
  'gstrotate.c',
  'gstsphere.c',
  'gsttwirl.c',
  'gstwaterripple.c',
  'gststretch.c',
  'gstbulge.c',
  'gsttunnel.c',
  'gstsquare.c',
  'gstmirror.c',
  'gstfisheye.c',
  'gstperspective.c',
]

gstgeometrictransform = library('gstgeometrictransform',
  geotr_sources,
  c_args : core_args,
  include_directories : core_incs,
  dependencies : [gstbase_dep, gstvideo_dep, libm],
)
